--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --host localhost",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test": "jest"
@@ -16,7 +16,7 @@
     "vue-router": "^4.1.3",
     "vue3-icon": "^2.1.0",
     "vuedraggable": "^4.1.0",
-    "vuetify": "^3.2.4",
+    "vuetify": "^3.4.3",
     "vuex": "^4.0.2",
     "vuex-persistedstate": "^4.1.0"
   },
@@ -27,10 +27,13 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^29.5.0",
-    "leaflet": "^1.9.4"
+    "leaflet": "^1.9.4",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1"
   },
   "eslintConfig": {
     "root": true,
@@ -45,11 +48,5 @@
       "parser": "@babel/eslint-parser"
     },
     "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead",
-    "not ie 11"
-  ]
+  }
 }
