--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,7 +1,7 @@
 version: 2
 updates:
-  - package-ecosystem: pip
-    directory: "/requirements"
+  - package-ecosystem: npm
+    directory: "/"
     schedule:
       interval: monthly
       time: "04:00"
