--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdi/js": "^7.2.96",
     "core-js": "^3.8.3",
     "firebase": "^9.9.1",
+    "notyf": "^3.10.0",
     "vue": "^3.2.13",
     "vue-router": "^4.1.3",
     "vue3-icon": "^2.1.0",
